--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use './scss/layout/containers' as *;
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
