--- a/src/app/shared/layout/header/header.component.scss
+++ b/src/app/shared/layout/header/header.component.scss
@@ -3,12 +3,12 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 999;
 
   display: grid;
   grid-template-columns: auto 1fr auto auto;
   gap: clamp(.5rem, 1.3vw, 1rem);
   height: 6rem;
-  padding-bottom: .3rem;
   border-bottom: 1px solid hsl(223, 14%, 90%);
   background-color: hsl(0, 0%, 100%);
 }
@@ -53,11 +53,19 @@
   color: hsl(219, 9%, 45%);
   font-size: clamp(.9rem, 2vw, 1rem);
   height: 100%;
+  border-bottom: .32rem solid hsl(0, 0%, 100%);
+  transition: border-bottom .3s;
+
+  &:hover {
+    color: hsl(220, 13%, 13%);
+    border-bottom: .32rem solid hsl(25, 100%, 94%);
+  }
 }
 
 .active-link {
   color: hsl(220, 13%, 13%);
   font-weight: 500;
+  border-bottom: .32rem solid hsl(26, 100%, 55%);
 }
 
 
