feat(cart): Add the cart dialog animation 💫
Animate the cart dialog states, enter and leave.

--- a/src/app/shared/components/cart/cart.component.html
+++ b/src/app/shared/components/cart/cart.component.html
@@ -6,7 +6,7 @@
 
 @if (isCartDialogOpen) {
 
-  <div class="cart-dialog-container">
+  <div @cartDialogAnimationTrigger class="cart-dialog-container">
     <header class="cart-dialog-header">
       <p class="cart-dialog-header-title">Cart</p>
     </header>
