--- a/src/app/shared/components/cart/cart.component.html
+++ b/src/app/shared/components/cart/cart.component.html
@@ -1,47 +1,52 @@
 
-<button type="button" class="cart-button" (click)="toggleCartDialog()" matBadge="99+" matBadgeOverlap="true" matBadgeSize="large">
+<button type="button" class="cart-button" (click)="toggleCartDialog()"
+        [matBadge]="getTotalQuantity()"
+        matBadgeOverlap="true"
+        matBadgeSize="large"
+        matTooltip="Your cart">
   <img ngSrc="/icons/icon-cart.svg" alt="" class="cart-button-icon" height="20" width="22">
 </button>
 
 
 @if (isCartDialogOpen) {
-
   <div @cartDialogAnimationTrigger class="cart-dialog-container">
+
     <header class="cart-dialog-header">
       <p class="cart-dialog-header-title">Cart</p>
     </header>
 
     <div class="cart-dialog-content">
 
-      <article class="cart-dialog__card-item">
-        <div class="card-item-thumbnail-container">
-          <img ngSrc="/images/products/orange-shoes/orange-shoes-thumbnail-1.webp" alt="" class="card-item-thumbnail"
-               height="176" width="176">
-        </div>
-        <div class="card-item-details-container">
-          <h4 class="card-item-details-title">Fall Limited Edition Sneakers</h4>
-          <p class="card-item-details-price">
-            <span class="card-item-details-price-regular">$125.00 x 3</span>
-            <span class="card-item-details-price-total">$375.00</span>
-          </p>
-        </div>
+      @for( item of cartItems; track trackByItemId;) {
+        <article class="cart-dialog__card-item">
+          <div class="card-item-thumbnail-container">
+            <img [ngSrc]="item.itemInCart.thumbnailGallery[0]" alt="" class="card-item-thumbnail"
+                 height="176" width="176">
+          </div>
+          <div class="card-item-details-container">
+            <h4 class="card-item-details-title">{{ item.itemInCart.title }}</h4>
+            <p class="card-item-details-price">
+              <span class="card-item-details-price-regular">{{ item.itemInCart.offerPrice | currency }} x {{ item.quantity }}</span>
+              <span class="card-item-details-price-total">{{ getTotalOfferPriceForProduct(item) | currency }}</span>
+            </p>
+          </div>
 
-        <button type="button" class="card-item-delete-button">
-          <svg width="14" height="16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <defs>
-              <path d="M0 2.625V1.75C0 1.334.334 1 .75 1h3.5l.294-.584A.741.741 0 0 1 5.213 0h3.571a.75.75 0 0 1 .672.416L9.75 1h3.5c.416 0 .75.334.75.75v.875a.376.376 0 0 1-.375.375H.375A.376.376 0 0 1 0 2.625Zm13 1.75V14.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 1 14.5V4.375C1 4.169 1.169 4 1.375 4h11.25c.206 0 .375.169.375.375ZM4.5 6.5c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Zm3 0c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Zm3 0c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Z" id="a"/>
-            </defs>
-            <use fill="currentColor" fill-rule="nonzero" xlink:href="#a"/>
-          </svg>
-        </button>
-
-      </article>
+          <button type="button" class="card-item-delete-button" (click)="removeFromCart(item)">
+            <svg width="14" height="16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <defs>
+                <path d="M0 2.625V1.75C0 1.334.334 1 .75 1h3.5l.294-.584A.741.741 0 0 1 5.213 0h3.571a.75.75 0 0 1 .672.416L9.75 1h3.5c.416 0 .75.334.75.75v.875a.376.376 0 0 1-.375.375H.375A.376.376 0 0 1 0 2.625Zm13 1.75V14.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 1 14.5V4.375C1 4.169 1.169 4 1.375 4h11.25c.206 0 .375.169.375.375ZM4.5 6.5c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Zm3 0c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Zm3 0c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Z" id="a"/>
+              </defs>
+              <use fill="currentColor" fill-rule="nonzero" xlink:href="#a"/>
+            </svg>
+          </button>
+        </article>
+      }
 
     </div>
+
     <footer class="cart-dialog-footer">
       <button class="cart-dialog__checkout-button">Checkout</button>
     </footer>
 
   </div>
-
 }
