--- a/src/app/shared/components/cart/cart.component.scss
+++ b/src/app/shared/components/cart/cart.component.scss
@@ -9,8 +9,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  aspect-ratio: 1;
+  padding: .4rem;
   border: none;
+  border-radius: 100%;
   background-color: transparent;
+  &:hover {
+    background-color: #f9f9f9;
+  }
 }
 
 .cart-button-icon {
