feat(header): Add CartComponent to HeaderComponent ✨

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -25,13 +25,11 @@
     </ul>
   </nav>
 
-  <div class="header__cart-block">
-    <a href="#" class="avatar-container">
-      <img ngSrc="/avatar-user.webp" alt="" class="avatar-thumbnail" height="100" width="100">
-    </a>
+  <div class="header__cart-block" >
+    <element-cart />
   </div>
   <div class="header__user-profile-block">
-    <a href="#" class="avatar-container">
+    <a href="#" matTooltip="Profile" class="avatar-container">
       <img ngSrc="/avatar-user.webp" alt="" class="avatar-thumbnail" height="100" width="100">
     </a>
   </div>
