--- a/src/app/shared/layout/header-reducted/header-reducted.component.html
+++ b/src/app/shared/layout/header-reducted/header-reducted.component.html
@@ -27,9 +27,9 @@
 
 </header>
 
-<div class="overlay-layer" (click)="toggleMobileMenu()"></div>
+<div *ngIf="isMobileMenuOpen" @overlayAnimation class="overlay-layer" (click)="toggleMobileMenu()"></div>
 
-<div class="header-reducted__menu">
+<div *ngIf="isMobileMenuOpen" @menuAnimation class="header-reducted__menu">
   <div class="header-reducted__menu-controls">
     <button class="menu-controls__close-button" (click)="toggleMobileMenu()">
       <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
