feat(cart): Add logic when cart is empty ✨
This will add the following:
- Hide 'Checkout' button if cart is empty.
- Show a message if cart is empty.

--- a/src/app/shared/components/cart/cart.component.html
+++ b/src/app/shared/components/cart/cart.component.html
@@ -40,13 +40,18 @@
             </svg>
           </button>
         </article>
+      } @empty {
+        <p class="empty-cart-message">Your cart is empty.</p>
       }
 
     </div>
 
-    <footer class="cart-dialog-footer">
-      <button class="cart-dialog__checkout-button">Checkout</button>
-    </footer>
+    @if(cartItems.length > 0) {
+      <footer class="cart-dialog-footer">
+        <button class="cart-dialog__checkout-button">Checkout</button>
+      </footer>
+    }
+
 
   </div>
 }
