feat(lightbox): Fix responsive lightbox 🩹

--- a/src/app/shared/components/lightbox/lightbox.component.html
+++ b/src/app/shared/components/lightbox/lightbox.component.html
@@ -11,16 +11,16 @@
 
     <swiper-container init="false" #swiperLightbox class="mySwiper">
       <swiper-slide class="swiper-slide-element">
-        <img [ngSrc]="data.gallery[0]" alt="" fill priority class="slide-image"/>
+        <img [ngSrc]="data.gallery[0]" alt="" width="1000" height="1000" priority class="slide-image"/>
       </swiper-slide>
       <swiper-slide class="swiper-slide-element">
-        <img [ngSrc]="data.gallery[1]" alt="" fill priority class="slide-image"/>
+        <img [ngSrc]="data.gallery[1]" alt="" width="1000" height="1000" priority class="slide-image"/>
       </swiper-slide>
       <swiper-slide class="swiper-slide-element">
-        <img [ngSrc]="data.gallery[2]" alt="" fill priority class="slide-image"/>
+        <img [ngSrc]="data.gallery[2]" alt="" width="1000" height="1000" priority class="slide-image"/>
       </swiper-slide>
       <swiper-slide class="swiper-slide-element">
-        <img [ngSrc]="data.gallery[3]" alt="" fill priority class="slide-image"/>
+        <img [ngSrc]="data.gallery[3]" alt="" width="1000" height="1000" priority class="slide-image"/>
       </swiper-slide>
     </swiper-container>
 
