--- a/src/app/shared/components/lightbox/lightbox.component.scss
+++ b/src/app/shared/components/lightbox/lightbox.component.scss
@@ -1,19 +1,15 @@
 
 .dialog-header {
   position: relative;
-}
-
-.material-dialog {
+  height: 2rem;
   padding: 0;
-  height: auto;
-  background-color: transparent !important;
 }
 
 .material-dialog__close-button {
   cursor: pointer;
   position: absolute;
-  top: 2%;
-  right: 4%;
+  top: 0;
+  right: 2%;
   z-index: 99999;
   display: flex;
   justify-content: center;
@@ -21,39 +17,53 @@
   color: white;
   fill: white;
   width: clamp(1rem, 5vw, 3rem);
-  height: clamp(1rem, 5vw, 3rem);
+  height: 100%;
   border: none;
   outline: none;
   background-color: transparent;
 }
 
+.material-dialog {
+  display: grid;
+  grid-template-columns: clamp(20rem, 50vw, 28rem);
+  grid-template-rows: 1fr 5rem;
+  grid-row-gap: .5rem;
+  height: 65vh;
+  max-height: 30rem;
+  padding: 0;
+}
+
+
 .mySwiper {
   position: relative;
-  min-width: 1rem;
-  height: clamp(20rem, 50vh, 33rem);
+  width: 100%;
+  height: 100%;
   border-radius: .8rem;
   overflow: hidden;
 
   --swiper-navigation-size: 2rem;
   --swiper-navigation-sides-offset: 13px;
   --swiper-navigation-color: hsl(220, 13%, 13%);
-  margin-bottom: 1rem;
 }
 
 .swiper-slide-element {
   position: relative;
+  inset: 0;
+  max-width: 100%;
+  height: 100%;
 }
 
 .slide-image {
   object-fit: cover;
-  aspect-ratio: 1;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .mySwiperThumbnails {
   position: relative;
   width: 80%;
   margin: 0 auto;
-  height: 6rem;
+  height: clamp(1rem, 15vw, 4.5rem);
   aspect-ratio: 1;
 
   --swiper-navigation-size: 2rem;
@@ -67,10 +77,6 @@
   overflow: hidden;
 }
 
-.slide-image {
-  object-fit: cover;
-  aspect-ratio: 1;
-}
 
 .mySwiperThumbnails .swiper-slide-thumb-active {
   &:before {
@@ -85,4 +91,3 @@
     border: 2px solid hsl(26, 100%, 55%);
   }
 }
-
